--- a/.github/workflows/tensorboard.yml
+++ b/.github/workflows/tensorboard.yml
@@ -22,4 +22,4 @@ jobs:
       run: pip install -r requirements.txt  # Adjust as needed
 
     - name: Run TensorBoard
-      run: tensorboard --logdir=tensorboard_logs --host 0.0.0.0 --port ${{ runner.port }}
+      run: tensorboard --logdir=tensorboard_logs --port=6006 &
